# cercana-proyect

./: .env.example  .flake8  .gitignore  DECISION_LOG.md  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 7d1da512205b_initial_migration.py
app/: main.py
app/api/routes/: auth.py  task.py
app/core/: settings.py
app/core/enums/: general_enums.py
app/db/: session.py
app/db/models/: task.py  user.py
app/db/repositories/: task.py  user.py
app/exceptions/: __init__.py
app/schemas/: auth.py  task.py  token.py  user.py
app/services/: auth.py  jwt.py  task.py
tests/: conftest.py
tests/integration/routes/: test_auth_routes.py  test_task_routes.py
